--- a/package.json
+++ b/package.json
@@ -1,19 +1,47 @@
 {
-  "name": "vue-coe-scroll",
+  "name": "vue-coe-scrollbar",
   "version": "0.1.0",
-  "private": true,
+  "license": "MIT",
+  "cdn": "dist/vue-coe-scrollbar.js",
+  "main": "dist/vue-coe-scrollbar.cjs.js",
+  "unpkg": "dist/vue-coe-scrollbar.js",
+  "module": "dist/vue-coe-scrollbar.es.js",
+  "jsdelivr": "dist/vue-coe-scrollbar.js",
+  "umd:main": "dist/vue-coe-scrollbar.js",
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
-  },
-  "dependencies": {
-    "vue": "^2.5.17",
-    "resize-observer-polyfill": "^1.5.1"
+    "test": "yarn build && NODE_ENV=test jest",
+    "serve": "yarn build && poi --serve examples/main.js",
+    "build": "bili"
   },
   "devDependencies": {
-    "@vue/cli-service": "^3.0.0",
-    "@vue/cli-plugin-babel": "^3.0.0",
-    "vue-template-compiler": "^2.5.17"
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.2.0",
+    "@vue/test-utils": "^1.0.0-beta.27",
+    "autoprefixer": "^9.4.3",
+    "babel-core": "^7.0.0-bridge",
+    "babel-jest": "^23.6.0",
+    "bili": "^3.4.2",
+    "jest": "^23.6.0",
+    "node-sass": "^4.11.0",
+    "poi": "^12.1.6",
+    "rollup-plugin-vue": "^4.3.2",
+    "sass-loader": "^7.1.0",
+    "vue": "^2.5.21",
+    "vue-jest": "^3.0.2",
+    "vue-template-compiler": "^2.5.21"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "vue"
+    ],
+    "transform": {
+      "^.+\\.js$": "<rootDir>/node_modules/babel-jest",
+      ".*\\.(vue)$": "<rootDir>/node_modules/vue-jest"
+    },
+    "moduleNameMapper": {
+      "^@/(.*)$": "<rootDir>/src/$1"
+    }
   }
 }
